# time-services

./: Makefile.am  build_script.sh  configure.ac  time-daemon.service  time_daemon.c
.github/workflows/: build_linux_gnu.yml  build_linux_x86.yml  codeql.yml  pull-request.yml
